style: minor z-index tweaking to correct overlapping

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,32 +1,32 @@
-.header{
-    -webkit-backdrop-filter: blur(8px);  /* Safari 9+ */
-    backdrop-filter: blur(8px); /* Chrome and Opera */
-    box-shadow: inset 0 0 0 200px rgba(255,255,255,0.08);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+.header {
+  -webkit-backdrop-filter: blur(8px); /* Safari 9+ */
+  backdrop-filter: blur(8px); /* Chrome and Opera */
+  box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.08);
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 .icon {
-    width: rem(22px);
-    height: rem(22px);
+  width: rem(22px);
+  height: rem(22px);
+}
+
+.dark {
+  @mixin dark {
+    display: none;
   }
-  
-  .dark {
-    @mixin dark {
-      display: none;
-    }
-  
-    @mixin light {
-      display: block;
-    }
+
+  @mixin light {
+    display: block;
   }
-  
-  .light {
-    @mixin light {
-      display: none;
-    }
-  
-    @mixin dark {
-      display: block;
-    }
+}
+
+.light {
+  @mixin light {
+    display: none;
   }
+
+  @mixin dark {
+    display: block;
+  }
+}
